modifications in swagger
