# templatestore/urls.py
@@ -5,10 +5,11 @@ urlpatterns = [
     # frontend
     path("", views.index, name="index"),
     # apis
-    path("api/v1/render", views.render_template),
+    path("api/v1/render", views.render_template_view),
     path("api/v1/template", views.template_view),
+    path("api/v1/config", views.config_view),
     re_path(
         "api/v1/template/(?P<name>[a-z|A-Z]+[a-z|A-Z|0-9|_]*)/(?P<version>\d+\.\d+)$",
-        views.template_details,
+        views.template_details_view,
     ),
 ]
